# Hammock

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
core/: CMakeLists.txt  CmakeLists.txt
core/ECS/include/base/: Component.h  Entity.h  System.h
core/ecs/: CMakeLists.txt
core/ecs/include/: ECS.h
core/ecs/include/base/: Component.h  Entity.h  System.h
core/ecs/include/utils/: ECSManager.hpp
core/engine/: CmakeLists.txt
core/engine/include/: Common.h  CommonDefines.h  Engine.h  GameObject.h  IGameObject.h  engine.h
core/engine/include/render.shaders/: vertex.glsl
core/engine/src/: Engine.cpp  engine.cpp
core/glew/: CMakeLists.txt
core/object/: CMakeLists.txt
core/object/include/: GameObject.hpp
core/scene/: CMakeLists.txt
core/scene/include/: Scene.h
core/scene/src/: Scene.cpp
core/shader/: CMakeLists.txt
core/shader/include/: Shader.h
core/shader/src/: Shader.cpp
core/window/: CmakeLists.txt
core/window/include/: Window.h
core/window/src/: Window.cpp
lib/input/: CmakeLists.txt
lib/input/include/: input.h
lib/input/src/: input.cpp
shaders/: fragment.glsl  vertex.glsl
